admin paneli srulad

--- a/AboutGeorgia/admin-panel/src-admin/sights.css
+++ b/AboutGeorgia/admin-panel/src-admin/sights.css
@@ -1,11 +1,10 @@
 .add-new{
-    width: 192px;
-    height: 80px;
+    width: 145px;
+    height: 90px;
     margin: 30px 10px 80px 30px;
     float: left;
     border-radius: 20px;
-    padding-top: 10px;
-     background:#dedede;
+    background:#dedede;
     }
 
 .add-new p{
@@ -31,5 +30,7 @@
     width: 730px !important;
     text-align: center;
 }
-
+section {
+    color: inherit;
+}
 
