--- a/AboutGeorgia/src/styles/main.css
+++ b/AboutGeorgia/src/styles/main.css
@@ -87,6 +87,51 @@ margin-right: 6rem;
         margin-bottom: 2px;
    
 }
+footer {
+    background-color: rgba(0, 0, 0, 0.4);  
+   /* background: rgba(139, 28, 64, 1);*/
+}
+
+.weather {
+    height: 40px;
+    border-top-left-radius: 20px;
+    border-top-right-radius:20px;
+    background: rgba(139, 28, 64, 1);
+    padding-top: 10px;
+  
+}
+.weather p {
+    text-align: center;
+    font-family: nino-mtavruli;
+    margin-bottom: 7px;
+ }
+ .weather a:hover >.weather-widget{
+    text-decoration: none;
+    transition: all 0.4s;
+   display: block;
+   }
+  
+footer {
+    padding-top: 20px;
+}
+footer img {
+    height: 70px;
+    margin-bottom: 20px;
+}
+.social-cirkle{
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    border:1px solid white;
+}
+.social-icon{
+    color: rgba(139, 28, 64, 1);
+    padding: 16px;
+    font-size: 20px;
+}
+.weather-widget{
+    display: none;}
+  
 
 
 
