--- a/AboutGeorgia/admin/src-admin/sights.css
+++ b/AboutGeorgia/admin/src-admin/sights.css
@@ -1,7 +1,7 @@
 .add-new{
     width: 145px;
     height: 90px;
-    margin: 30px 10px 80px 30px;
+   margin: 20px 20px 0px 0px;
     float: left;
     border-radius: 20px;
     background:#dedede;
@@ -14,6 +14,7 @@
        padding: 0px !important;
    }
    .tool-box{
+       margin-top: 30px;
        float: left;
    }
 
