--- a/AboutGeorgia/src/styles/common/sights-page.css
+++ b/AboutGeorgia/src/styles/common/sights-page.css
@@ -25,63 +25,62 @@
 .slider img {
     width: 100%;
     max-height: 600px;
+    margin-bottom: 30px;
 }
-.filter {
-    padding: 20px;
-}
-.filter h3{
-    font-size: 16px;
-    text-align: center;
-    margin: 20px;
-}
-.filter .btn{
-    margin-top: 57px !important;
-    width: 170px;
-}
-.filter i{
-    margin-left: 5px;
-}
-
-
-
-input::-webkit-calendar-picker-indicator {
-    display: none;
-  }
-
-
-
 main{
-    padding: 30px;
+    background:#e6c4c433;
 }
-main section article {
-    width: 295px;
-    height:330px;
-     float: left;
-     margin-bottom: 20px;
-    box-shadow: 15px 15px 20px rgba(0,0,0,.09);
+aside{
+    border: 1px solid blue;
+    width: 100%;
+    height: 400px;
+    margin-bottom: 20px;
+ 
 }
-main section article:hover {
-    box-shadow: 0 0 6.6rem rgba(0,0,0,.5);
+section article {
+    width: 100%;
+    height: 280px;
+    border:1px solid black;
+    margin-bottom: 20px;
+    position: relative;
+    overflow: hidden;/*es suratis zoomistvis*/
 }
-.image-container{
-    width: 295px;
-    height: 270px;
-}
-.image-container img{
+section article:hover img{
+    transform: scale(1.2);}
+
+section article img{
     width: 100%;
     height: 100%;
+    position: absolute;
+    transition: 0.75s;      
 }
-main section article i {
+
+.text-container{
+    width: 100%;
+    height: 60px;
+    background: #d0cbcbc2;
+    position: absolute; 
+    top:218px;
+    display: none;  
+   
+  }
+section article:hover > .text-container{
+    display: block;
+  }
+section article i {
     color: orange;
     float: left;
     margin: 0px 10px 0px 10px;
 }
-main section article p{
-    font-family: nino-mtavruli;
+section article p{
     font-size: 14px;
-    
-
 }
+
+  
+
+
+
+
 
   footer {
     background-color: rgba(0, 0, 0, 0.4);  
