--- a/AboutGeorgia/src/styles/main.css
+++ b/AboutGeorgia/src/styles/main.css
@@ -11,22 +11,29 @@
     padding-left: 0px !important;
     padding-right: 0px !important;
 }*/
-.nav-item {
-    padding-left: 25px;
-}
-a {
-    color:inherit;   
-}
-a:hover{
-    text-decoration: none;
-    color: orange;
+.language {
+    width: 70px;
+    height: 60px;
+    border: 1px solid white;
+    float: right;
 }
 header {
     width: 100%;
     z-index: 6;
-    position: fixed;
-      
+    position: fixed;      
 }
+header a {
+    color: white;
+    font-family: nino-mtavruli;
+}
+ a:hover{
+    color: orange;
+}
+.nav-link {
+    color: white !important;
+}
+
+
 .header-social-icon{
     width: 50px;    
     text-align: center;    
@@ -61,18 +68,31 @@ header {
 
 .navbar-brand img{
     height: 70px;    
+} 
+.navbar-brand {
+    margin-right: 5rem !important;
+}
+.navbar {
+    height: 90px;
+}
+.navbar {
+    padding: 0px !important;
 }
 
+.icon-bar2 {
+    display: block;
+    width: 46px;
+    height: 4px;
+    border-radius: 1px;
+    background-color:white;
+     margin-bottom: 6px;
+}
+.navbar-toggler {
+    border: none !important;
+}
 
-.nav-item {
-    padding-left: 33px;
-}
-.dropdown-item{
-    padding: 0.8rem 1.5rem; 
-}
-header a {
-    color: white;
-    font-family: nino-mtavruli;
+button:focus {
+    outline: none;
 }
 
 
@@ -163,33 +183,16 @@ footer img {
     
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
+    .navbar-collapse {
+        background: rgba(139, 28, 64, 1);
+    }
     
    
   
 }
 
 @media (max-width: 992px) {
-    .navbar-toggler {
-        border-color: black !important;
-      
-    }
-    .bg{
-        background:  rgba(139, 28, 64, 1) !important;
-    }
-    .header-top {
-        display: none;
-    }
-  .navbar{
-      height: 90px;
-  }
-  .navbar-nav {
-      background: rgba(139, 28, 64, 1); 
-  }
-  .form-inline {
-      background:  rgba(139, 28, 64, 1);
-      margin: 0px !important;
-  }
     
 }
 
