--- a/AboutGeorgia/src/styles/common/sights-page.css
+++ b/AboutGeorgia/src/styles/common/sights-page.css
@@ -35,6 +35,12 @@ aside{
     width: 100%;
     height: 400px;
     margin-bottom: 20px;
+    position: fixed;
+    width: 300px;
+ 
+    top:320px;
+    overflow:auto;
+ 
  
 }
 section article {
