--- a/AboutGeorgia/src/styles/common/sights-page.css
+++ b/AboutGeorgia/src/styles/common/sights-page.css
@@ -10,16 +10,18 @@
 @keyframes headerCarouselZoom {
     from {
         transform: scale(1.5, 1.5);
-    }    
+    }
+
     to {
         transform: scale(1, 1);
     }
 }
- h3 {
-     font-size: 16px;
-     font-family: nino-mtavruli;
-     margin: 10px 0px 5px 10px;
- }
+
+h3 {
+    font-size: 16px;
+    font-family: nino-mtavruli;
+    margin: 10px 0px 5px 10px;
+}
 
 
 .slider img {
@@ -27,109 +29,184 @@
     max-height: 600px;
     margin-bottom: 30px;
 }
-main{
-    background:#e6c4c433;
+
+main {
+    background: #e6c4c433;
 }
-aside{
-    border: 1px solid blue;
-    width: 100%;
-    height: 400px;
-    margin-bottom: 20px;
-    position: fixed;
-    width: 300px;
- 
-    top:320px;
-    overflow:auto;
- 
- 
+
+.hidden {
+    display: none;
 }
+
+
+
+
+
+.filter h3 {
+    font-size: 16px;
+    text-align: center;
+    margin: 20px;
+}
+
+.filter .btn {
+    margin-top: 57px !important;
+    width: 170px;
+}
+
+.filter i {
+    margin-left: 5px;
+}
+
+
+
+
+
+
+
+
+section {
+
+    z-index: 9;
+}
+
 section article {
     width: 100%;
     height: 280px;
-    border:1px solid black;
+    border: 1px solid black;
     margin-bottom: 20px;
     position: relative;
-    overflow: hidden;/*es suratis zoomistvis*/
+    overflow: hidden;
+    /*es suratis zoomistvis*/
 }
-section article:hover img{
-    transform: scale(1.2);}
 
-section article img{
+section article:hover img {
+    transform: scale(1.2);
+}
+
+section article img {
     width: 100%;
     height: 100%;
     position: absolute;
-    transition: 0.75s;      
+    transition: 0.75s;
 }
 
-.text-container{
+.text-container {
     width: 100%;
     height: 60px;
     background: #d0cbcbc2;
-    position: absolute; 
-    top:218px;
-    display: none;  
-   
-  }
-section article:hover > .text-container{
+    position: absolute;
+    top: 218px;
+    display: none;
+
+}
+
+section article:hover>.text-container {
     display: block;
-  }
+}
+
 section article i {
     color: orange;
     float: left;
     margin: 0px 10px 0px 10px;
 }
-section article p{
+
+section article p {
     font-size: 14px;
 }
 
-  
 
 
 
 
 
-  footer {
-    background-color: rgba(0, 0, 0, 0.4);  
-   /* background: rgba(139, 28, 64, 1);*/
+
+footer {
+    background-color: rgba(0, 0, 0, 0.4);
+    /* background: rgba(139, 28, 64, 1);*/
 }
 
 .weather {
     height: 40px;
     border-top-left-radius: 20px;
-    border-top-right-radius:20px;
+    border-top-right-radius: 20px;
     background: rgba(139, 28, 64, 1);
     padding-top: 10px;
-  
+
 }
+
 .weather p {
     text-align: center;
     font-family: nino-mtavruli;
     margin-bottom: 7px;
- }
- .weather a:hover >.weather-widget{
+}
+
+.weather a:hover>.weather-widget {
     text-decoration: none;
     transition: all 0.4s;
-   display: block;
-   }
-  
+    display: block;
+}
+
 footer {
     padding-top: 20px;
 }
+
 footer img {
     height: 70px;
     margin-bottom: 20px;
 }
-.social-cirkle{
+
+.social-cirkle {
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    border:1px solid white;
+    border: 1px solid white;
 }
-.social-icon{
+
+.social-icon {
     color: rgba(139, 28, 64, 1);
     padding: 16px;
     font-size: 20px;
 }
-.weather-widget{
-    display: none;}
-  
+
+.weather-widget {
+    display: none;
+}
+
+@media (min-width: 576px) {}
+
+@media (max-width: 768px) {
+    .navbar-collapse {
+        background: rgba(139, 28, 64, 1);
+        margin-top: 10px;
+        padding-left: 10pd;
+    }
+
+    .hidden {
+        display: block;
+    }
+
+    .filter {
+        display: none;
+    }
+
+
+
+
+}
+
+@media (min-width: 992px) {
+    .nav-link {
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+    }
+
+
+}
+
+
+
+
+
+
+
+@media (min-width: 1200px) {}
