--- a/AboutGeorgia/src/styles/common/kitchen-page.css
+++ b/AboutGeorgia/src/styles/common/kitchen-page.css
@@ -10,121 +10,174 @@
 @keyframes headerCarouselZoom {
     from {
         transform: scale(1.5, 1.5);
-    }    
+    }
+
     to {
         transform: scale(1, 1);
     }
 }
- h3 {
-     font-size: 16px;
-     font-family: nino-mtavruli;
-     margin: 10px 0px 5px 10px;
- }
+
+h3 {
+    font-size: 16px;
+    font-family: nino-mtavruli;
+    margin: 10px 0px 5px 10px;
+}
 
 
 .slider img {
     width: 100%;
     max-height: 600px;
 }
+
 .filter {
     padding: 20px;
 }
-.filter h3{
+
+.filter h3 {
     font-size: 16px;
     text-align: center;
     margin: 20px;
 }
-.filter .btn{
+
+.filter .btn {
     margin-top: 57px !important;
     width: 170px;
 }
-.filter i{
+
+.filter i {
     margin-left: 5px;
+}
+
+.hidden {
+    display: none;
 }
 
 
 
 input::-webkit-calendar-picker-indicator {
     display: none;
-  }
+}
 
 
 
-main{
+main {
     padding: 30px;
 }
+
 main section article {
     width: 295px;
-    height:330px;
-     float: left;
-     margin-bottom: 20px;
-    box-shadow: 15px 15px 20px rgba(0,0,0,.09);
+    height: 330px;
+    float: left;
+    margin-bottom: 20px;
+    box-shadow: 15px 15px 20px rgba(0, 0, 0, .09);
+    position: relative;
 }
-main section article:hover {
-    box-shadow: 0 0 6.6rem rgba(0,0,0,.5);
-}
-.image-container{
+
+
+.image-container {
     width: 295px;
     height: 270px;
+    overflow: hidden;
 }
-.image-container img{
+
+.image-container img {
     width: 100%;
     height: 100%;
+    transition: 0.75s;
 }
+
+main section article:hover img {
+    transform: scale(1.2);
+}
+
 main section article i {
     color: orange;
     float: left;
     margin: 0px 10px 0px 10px;
 }
-main section article p{
+
+main section article p {
     font-family: nino-mtavruli;
     font-size: 14px;
-    
+
 
 }
 
-  footer {
-    background-color: rgba(0, 0, 0, 0.4);  
-   /* background: rgba(139, 28, 64, 1);*/
+footer {
+    background-color: rgba(0, 0, 0, 0.4);
+    /* background: rgba(139, 28, 64, 1);*/
 }
 
 .weather {
     height: 40px;
     border-top-left-radius: 20px;
-    border-top-right-radius:20px;
+    border-top-right-radius: 20px;
     background: rgba(139, 28, 64, 1);
     padding-top: 10px;
-  
+
 }
+
 .weather p {
     text-align: center;
     font-family: nino-mtavruli;
     margin-bottom: 7px;
- }
- .weather a:hover >.weather-widget{
+}
+
+.weather a:hover>.weather-widget {
     text-decoration: none;
     transition: all 0.4s;
-   display: block;
-   }
-  
+    display: block;
+}
+
 footer {
     padding-top: 20px;
 }
+
 footer img {
     height: 70px;
     margin-bottom: 20px;
 }
-.social-cirkle{
+
+.social-cirkle {
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    border:1px solid white;
+    border: 1px solid white;
 }
-.social-icon{
+
+.social-icon {
     color: rgba(139, 28, 64, 1);
     padding: 16px;
     font-size: 20px;
 }
-.weather-widget{
-    display: none;}
-  
+
+.weather-widget {
+    display: none;
+}
+
+@media (min-width: 576px) {}
+
+@media (max-width: 768px) {
+
+
+    .hidden {
+        display: block;
+    }
+
+    .filter {
+        display: none;
+    }
+
+    .hidden .btn {
+        margin-top: 20px;
+    }
+
+    .hidden button {
+        width: 100%;
+    }
+
+
+
+}
+
+@media (min-width: 992px) {}
