--- a/AboutGeorgia/src/styles/common/sights-page.css
+++ b/AboutGeorgia/src/styles/common/sights-page.css
@@ -24,23 +24,23 @@ h3 {
 }
 
 
+
 .slider img {
     width: 100%;
     max-height: 600px;
-    margin-bottom: 30px;
+
+
 }
 
-main {
-    background: #e6c4c433;
-}
-
-.hidden {
-    display: none;
+aside {
+    float: left;
 }
 
 
+.filter {
+    padding: 20px;
 
-
+}
 
 .filter h3 {
     font-size: 16px;
@@ -57,67 +57,208 @@ main {
     margin-left: 5px;
 }
 
-
-
-
-
-
-
-
-section {
-
-    z-index: 9;
+.hidden {
+    display: none;
 }
 
-section article {
-    width: 100%;
-    height: 280px;
-    border: 1px solid black;
-    margin-bottom: 20px;
+input::-webkit-calendar-picker-indicator {
+    display: none;
+}
+
+.fa-2x {
+    font-size: 2em;
+    color: orange;
+
+}
+
+.fa {
     position: relative;
-    overflow: hidden;
-    /*es suratis zoomistvis*/
+    display: table-cell;
+    width: 60px;
+    height: 36px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 20px;
 }
 
-section article:hover img {
+.main-menu:hover,
+nav.main-menu .expanded {
+    width: 215px;
+    overflow: visible;
+
+}
+
+.main-menu {
+    background: rgba(139, 28, 64, 1);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 280px;
+    left: 0;
+    width: 60px;
+    overflow: hidden;
+    transition: width 0.5s linear;
+    z-index: 1;
+}
+
+.main-menu>ul {
+    margin: 7px 0;
+}
+
+.main-menu li {
+    position: relative;
+    display: block;
+    width: 250px;
+    margin-top: 30px;
+}
+
+.main-menu li a {
+    position: relative;
+    display: table;
+    border-collapse: collapse;
+    border-spacing: 0;
+    color: white;
+    font-family: nino mtavruli;
+    font-size: 15px;
+    text-decoration: none;
+    transition: all 1s linear;
+}
+
+.main-menu li a:hover>.fa-2x {
+    color: black;
+    transition: all none;
+}
+
+.main-menu.nav-text {
+    position: relative;
+    display: table-cell;
+    vertical-align: middle;
+    width: 190px;
+    font-family: nino-mtavruli;
+
+}
+
+
+
+
+.main-menu .nav-icon {
+    position: relative;
+    display: table-cell;
+    width: 60px;
+    height: 36px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 18px;
+
+}
+
+.main-menu ul .logout {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+
+}
+
+.no-touch .scrollable.hover {
+    overflow-y: hidden;
+}
+
+.no-touch .scrollable.hover:hover {
+    overflow-y: auto;
+    overflow: visible;
+}
+
+a:hover,
+a:focus {
+    text-decoration: none;
+}
+
+nav {
+    user-select: none;
+}
+
+nav ul,
+nav li {
+    outline: 0;
+    padding: 0;
+    margin: 0;
+}
+
+.main-menu li:hover a;
+nav .main-menu li:active a;
+
+.dropdown-menu li a:hover,
+.dropdown-menu li a:focus,
+.dropdown-menu .active a,
+.dropdown-menu .active a:hover,
+.dropdown-menu .active a:focus,
+.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,
+.dashboard-page nav.dashboard-menu ul li .active a {
+    color: aliceblue;
+    background: yellow,
+}
+
+
+main {
+    padding: 30px;
+}
+
+main section article {
+    width: 100%;
+    height: 330px;
+    float: left;
+    margin-bottom: 20px;
+    box-shadow: 15px 15px 20px rgba(0, 0, 0, .09);
+    position: relative;
+
+}
+
+main section article:hover img {
     transform: scale(1.2);
 }
 
-section article img {
+.image-container {
+    width: 100%;
+    height: 270px;
+    overflow: hidden;
+}
+
+.image-container img {
     width: 100%;
     height: 100%;
-    position: absolute;
+
     transition: 0.75s;
-}
-
-.text-container {
-    width: 100%;
-    height: 60px;
-    background: #d0cbcbc2;
-    position: absolute;
-    top: 218px;
-    display: none;
 
 }
 
-section article:hover>.text-container {
-    display: block;
-}
-
-section article i {
+main section article i {
     color: orange;
     float: left;
     margin: 0px 10px 0px 10px;
 }
 
-section article p {
+main section article p {
+    font-family: nino-mtavruli;
     font-size: 14px;
+
+
 }
 
+.hidden-aside {
+    display: none;
+}
 
+.categories-icons {
+    float: left;
+    color: white;
+    padding-top: 5px;
+    padding-right: 10px;
+}
 
-
-
+button {
+    margin-bottom: 10px;
+}
 
 
 footer {
@@ -175,11 +316,7 @@ footer img {
 @media (min-width: 576px) {}
 
 @media (max-width: 768px) {
-    .navbar-collapse {
-        background: rgba(139, 28, 64, 1);
-        margin-top: 10px;
-        padding-left: 10pd;
-    }
+
 
     .hidden {
         display: block;
@@ -189,24 +326,22 @@ footer img {
         display: none;
     }
 
-
-
-
-}
-
-@media (min-width: 992px) {
-    .nav-link {
-        padding-right: 0.5rem;
-        padding-left: 0.5rem;
+    .hidden .btn {
+        margin-top: 20px;
     }
 
+    .hidden button {
+        width: 100%;
+    }
+
+    .hidden-aside {
+        display: block;
+    }
+
+    .area {
+        display: none;
+    }
 
 }
 
-
-
-
-
-
-
-@media (min-width: 1200px) {}
+@media (max-width: 992px) {}
