--- a/AboutGeorgia/src/styles/common/kitchen-page.css
+++ b/AboutGeorgia/src/styles/common/kitchen-page.css
@@ -29,8 +29,17 @@ h3 {
     max-height: 600px;
 }
 
+
+}
+
+aside {
+    float: left;
+}
+
+
 .filter {
     padding: 20px;
+
 }
 
 .filter h3 {
@@ -52,30 +61,164 @@ h3 {
     display: none;
 }
 
-
-
 input::-webkit-calendar-picker-indicator {
     display: none;
 }
 
+.fa-2x {
+    font-size: 2em;
+    color: orange;
 
+}
+
+.fa {
+    position: relative;
+    display: table-cell;
+    width: 60px;
+    height: 36px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 20px;
+}
+
+.main-menu:hover,
+nav.main-menu .expanded {
+    width: 215px;
+    overflow: visible;
+
+}
+
+.main-menu {
+    background: rgba(139, 28, 64, 1);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 280px;
+    left: 0;
+    width: 60px;
+    overflow: hidden;
+    transition: width 0.5s linear;
+    z-index: 1;
+}
+
+.main-menu>ul {
+    margin: 7px 0;
+}
+
+.main-menu li {
+    position: relative;
+    display: block;
+    width: 250px;
+    margin-top: 30px;
+}
+
+.main-menu li a {
+    position: relative;
+    display: table;
+    border-collapse: collapse;
+    border-spacing: 0;
+    color: white;
+    font-family: nino mtavruli;
+    font-size: 15px;
+    text-decoration: none;
+    transition: all 1s linear;
+}
+
+.main-menu li a:hover>.fa-2x {
+    color: black;
+    transition: all none;
+}
+
+.main-menu.nav-text {
+    position: relative;
+    display: table-cell;
+    vertical-align: middle;
+    width: 190px;
+    font-family: nino-mtavruli;
+
+}
+
+
+
+
+.main-menu .nav-icon {
+    position: relative;
+    display: table-cell;
+    width: 60px;
+    height: 36px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 18px;
+
+}
+
+.main-menu ul .logout {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+
+}
+
+.no-touch .scrollable.hover {
+    overflow-y: hidden;
+}
+
+.no-touch .scrollable.hover:hover {
+    overflow-y: auto;
+    overflow: visible;
+}
+
+a:hover,
+a:focus {
+    text-decoration: none;
+}
+
+nav {
+    user-select: none;
+}
+
+nav ul,
+nav li {
+    outline: 0;
+    padding: 0;
+    margin: 0;
+}
+
+.main-menu li:hover a;
+nav .main-menu li:active a;
+
+.dropdown-menu li a:hover,
+.dropdown-menu li a:focus,
+.dropdown-menu .active a,
+.dropdown-menu .active a:hover,
+.dropdown-menu .active a:focus,
+.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,
+.dashboard-page nav.dashboard-menu ul li .active a {
+    color: aliceblue;
+    background: yellow,
+}
 
 main {
-    padding: 30px;
+    padding: 10px 30px 30px 30px;
 }
 
 main section article {
-    width: 295px;
+    width: 100%;
     height: 330px;
     float: left;
     margin-bottom: 20px;
     box-shadow: 15px 15px 20px rgba(0, 0, 0, .09);
     position: relative;
+
 }
 
+main section article:hover img {
+    transform: scale(1.2);
+}
 
 .image-container {
-    width: 295px;
+    width: 100%;
     height: 270px;
     overflow: hidden;
 }
@@ -84,10 +227,7 @@ main section article {
     width: 100%;
     height: 100%;
     transition: 0.75s;
-}
 
-main section article:hover img {
-    transform: scale(1.2);
 }
 
 main section article i {
@@ -101,6 +241,21 @@ main section article p {
     font-size: 14px;
 
 
+}
+
+.hidden-aside {
+    display: none;
+}
+
+.categories-icons {
+    float: left;
+    color: white;
+    padding-top: 5px;
+    padding-right: 10px;
+}
+
+button {
+    margin-bottom: 10px;
 }
 
 footer {
@@ -159,7 +314,6 @@ footer img {
 
 @media (max-width: 768px) {
 
-
     .hidden {
         display: block;
     }
@@ -175,6 +329,16 @@ footer img {
     .hidden button {
         width: 100%;
     }
+
+    .hidden-aside {
+        display: block;
+    }
+
+    .area {
+        display: none;
+    }
+
+
 
 
 
