--- a/AboutGeorgia/src/styles/main.css
+++ b/AboutGeorgia/src/styles/main.css
@@ -39,8 +39,20 @@ a:hover {
     color: orange !important;
 }
 
+nav ul li:first-child {
+    margin-top: 7px;
+    margin-right: 23px;
+
+}
+
 .nav-item {
-    margin-left: 60px;
+    margin-left: 40px;
+}
+
+
+
+.dropdown-item:hover {
+    background: rgba(139, 28, 64, 0.72);
 }
 
 .header-social-icon {
@@ -53,6 +65,7 @@ a:hover {
     background:#f9a0a052;  
     border-radius: 10px; */
 }
+
 
 .header-top {
     height: 0px;
@@ -78,6 +91,26 @@ a:hover {
 
 .navbar-brand img {
     height: 70px;
+}
+
+.btn-secondary {
+    background: none !important;
+    border-color: none !important;
+    border: none !important;
+}
+
+.btn-secondary:hover {
+    border-color: none !important;
+    border: none !important;
+}
+
+.btn-group>.btn:not(:first-child),
+.btn-group>.btn-group:not(:first-child) {
+    margin-left: -17px;
+}
+
+.dropdown-toggle-split {
+    font-size: 20px;
 }
 
 
@@ -106,6 +139,15 @@ button:focus {
 .btn-outline-success:hover {
     background: #b97070 !important;
 
+}
+
+.btn-secondary,
+.btn:focus {
+    box-shadow: none !important;
+}
+
+.header-btn-new {
+    padding-left: 0px;
 }
 
 .icon-bar {
@@ -183,7 +225,17 @@ footer img {
     src: url('../../assets/fonts/bpg_nino_mtavruli_bold.ttf');
 }
 
-@media (min-width: 576px) {}
+@media (max-width: 576px) {
+    .dropdown-item {
+        font-size: 12px !important;
+        padding-left: 5px !important;
+    }
+
+    .btn-group>.btn:not(:first-child),
+    .btn-group>.btn-group:not(:first-child) {
+        margin-left: -15px;
+    }
+}
 
 @media (max-width: 768px) {
     .nav-item {
@@ -205,14 +257,20 @@ footer img {
 
 @media (max-width: 1024px) {
     .nav-item {
-        margin-left: 33px;
+        margin-left: 12px;
 
     }
 
-    @media (min-width: 992px) {}
+    .btn-group>.btn:not(:first-child),
+    .btn-group>.btn-group:not(:first-child) {
+        margin-left: -20px;
+    }
+}
+
+@media (min-width: 992px) {}
 
 
 
 
 
-    @media (min-width: 1200px) {}
+@media (min-width: 1200px) {}
