--- a/AboutGeorgia/src/styles/common/index.css
+++ b/AboutGeorgia/src/styles/common/index.css
@@ -37,8 +37,34 @@
      width: 100%;
      margin-bottom: 10px;
      text-align: justify;
+     position: relative;
 
  }
+
+ .video-container {
+     width: 100%;
+     height: 315px;
+ }
+
+ .video-container img {
+     width: 100%;
+     height: 100%;
+
+ }
+
+ .transition-image {
+     position: absolute;
+     top: 0;
+     left: 0;
+     opacity: 0;
+     transition: opacity 0.5s ease;
+
+ }
+
+ .transition-image:hover {
+     opacity: 1;
+ }
+
 
  .clip h1 {
      font-size: 20px;
