--- a/AboutGeorgia/src/styles/common/index.css
+++ b/AboutGeorgia/src/styles/common/index.css
@@ -7,9 +7,10 @@
     }
   }
    */
+
  @keyframes headerCarouselZoom {
      from {
-         transform: scale(1.5, 1.5);
+         transform: scale(1.3, 1.3);
      }
 
      to {
@@ -17,15 +18,21 @@
      }
  }
 
- .slider .carousel-inner .carousel-item>img {
+ .slider .carousel-inner .carousel-item>.img-slider-container {
      /* -webkit-animation: headerCarouselZoom 20s; */
-     animation: headerCarouselZoom 20s;
+     animation: headerCarouselZoom 10s;
  }
 
  .slider.carousel-item img {
      width: 100%;
+     height: 100%;
  }
 
+
+ .img-slider-container {
+     width: 100%;
+     max-height: 550px;
+ }
 
 
  .video {
@@ -169,6 +176,13 @@
      margin-bottom: 5px;
  }
 
+ .text-advanture h3 {
+     font-size: 16px;
+     font-family: nino-mtavruli;
+     margin-top: 15px;
+     margin-left: 17px;
+ }
+
  .adventure article img {
      width: 100%;
      height: 300px;
@@ -290,3 +304,19 @@
  .weather-widget {
      display: none;
  }
+
+ @media (max-width: 576px) {}
+
+ @media (max-width: 768px) {}
+
+
+
+ @media (max-width: 1024px) {}
+
+ @media (min-width: 992px) {}
+
+
+
+
+
+ @media (min-width: 1200px) {}
