--- a/AboutGeorgia/src/styles/common/sights-page.css
+++ b/AboutGeorgia/src/styles/common/sights-page.css
@@ -64,7 +64,7 @@ input::-webkit-calendar-picker-indicator {
 
 .fa-2x {
     font-size: 2em;
-    color: orange;
+    color: white;
 
 }
 
@@ -95,6 +95,7 @@ nav.main-menu .expanded {
     overflow: hidden;
     transition: width 0.5s linear;
     z-index: 1;
+    padding-top: 5px;
 }
 
 .main-menu>ul {
@@ -243,6 +244,11 @@ main section article p {
 
 button {
     margin-bottom: 10px;
+}
+
+.pagination {
+    justify-content: center;
+    margin-top: 30px;
 }
 
 footer {
