--- a/AboutGeorgia/src/styles/common/sights-konkretulad.css
+++ b/AboutGeorgia/src/styles/common/sights-konkretulad.css
@@ -27,6 +27,11 @@ h1 {
     height: 170px;
 }
 
+.slider img {
+    width: 100%;
+    max-height: 600px;
+}
+
 main {
     min-height: 390px;
     padding: 30px 20px 20px 50px;
@@ -38,22 +43,20 @@ main {
     text-indent: 2em;
 }
 
-.image-container {
-    width: 100%;
-    height: 200px;
-    float: left;
-    margin-bottom: 10px;
-
-}
 
 .image-container img {
     width: 100%;
     height: 100%;
+
 }
 
+.image-container {
+    width: 100%;
+    height: 250px;
+    float: left;
+    margin-bottom: 10px;
 
-
-
+}
 
 
 footer {
