--- a/AboutGeorgia/src/styles/common/sights-page.css
+++ b/AboutGeorgia/src/styles/common/sights-page.css
@@ -27,7 +27,7 @@ h3 {
 
 .slider img {
     width: 100%;
-    max-height: 600px;
+    max-height: 512px;
 }
 
 aside {
@@ -341,6 +341,18 @@ footer img {
         height: 220px;
     }
 
+    .slider img {
+        width: 100%;
+        max-height: 200px;
+    }
+}
 }
 
 @media (max-width: 992px) {}
+
+@media (max-width: 1024px) {
+    .slider img {
+        width: 100%;
+        max-height: 370px;
+    }
+}
